@@ -1,0 +1,16 @@
+define([], function () {
+    'use strict';
+
+    return {
+        /**
+         * @return {Object}
+         */
+        getRules: function () {
+            return {
+                'country_id': {
+                    'required': true
+                }
+            };
+        }
+    };
+});
